@@ -1,3 +1,10 @@
+2011-05-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: add a workaround for automake bug#8485
+	* tests/yacc-d-cxx.test (Makefile.am): Add temporary workaround
+	for automake bug#8485.  The bug is still exposed by the testcase
+	'yacc-dist-nobuild-subdir.test'.
+
 2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: add a couple of inter-tests reference
